--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html"
   },
   "devDependencies": {
+    "coveralls": "2.11.2",
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
     "request": "2.53.0",
