--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "jshint": "2.6.0",
     "request": "2.53.0",
     "unexpected": "5.8.1",
-    "unexpected-http": "1.5.0"
+    "unexpected-http": "1.7.0",
+    "unexpected-messy": "2.10.0"
   },
   "dependencies": {
     "messy": "4.1.1",
     "mitm-papandreou": "1.0.3-patch1",
     "mocha": "2.1.0",
-    "underscore": "1.7.0",
-    "unexpected-http": "1.6.0",
-    "unexpected-messy": "2.10.0"
+    "underscore": "1.7.0"
   }
 }
