--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "callsite": "1.0.0",
     "detect-indent": "3.0.0",
+    "memoizesync": "0.5.0",
     "messy": "4.1.1",
     "mitm-papandreou": "1.0.3-patch1",
     "mocha": "2.1.0",
