--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "unexpected-messy": "2.11.1"
   },
   "dependencies": {
+    "async": "0.9.0",
     "callsite": "1.0.0",
     "detect-indent": "3.0.0",
     "memoizesync": "0.5.0",
