--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "travis": "npm test && npm run coverage && <coverage/lcov.info coveralls",
     "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html"
   },
+  "peerDependencies": {
+    "unexpected-messy": "2"
+  },
   "devDependencies": {
     "coveralls": "2.11.2",
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
     "request": "2.53.0",
     "unexpected": "6.3.1",
-    "unexpected-http": "1.9.0",
+    "unexpected-http": "2.0.0",
     "unexpected-messy": "2.14.0"
   },
   "dependencies": {
