--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html"
   },
   "peerDependencies": {
-    "unexpected-messy": "2"
+    "unexpected-messy": "^2.16.1"
   },
   "devDependencies": {
     "coveralls": "2.11.2",
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
+    "messy": "5.0.1",
     "request": "2.53.0",
     "unexpected": "6.3.1",
     "unexpected-http": "2.0.0",
-    "unexpected-messy": "2.14.0"
+    "unexpected-messy": "2.16.1"
   },
   "dependencies": {
     "async": "0.9.0",
