--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "detect-indent": "3.0.0",
     "memoizesync": "0.5.0",
     "messy": "6.1.0",
-    "mitm-papandreou": "1.0.3-patch1",
+    "mitm": "1.1.0",
     "mocha": "2.1.0",
     "passerror": "1.1.0",
     "underscore": "1.7.0"
