--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html"
   },
   "peerDependencies": {
+    "unexpected": "^7.2.0",
     "unexpected-messy": "^3.0.1"
   },
   "devDependencies": {
@@ -17,7 +18,7 @@
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
     "request": "2.53.0",
-    "unexpected": "7.0.5",
+    "unexpected": "7.2.0",
     "unexpected-http": "3.0.2",
     "unexpected-messy": "3.0.3",
     "unexpected-promise": "1.1.1"
