--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "coveralls": "2.11.2",
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
+    "pem": "1.7.2",
     "request": "2.53.0",
     "unexpected": "7.2.0",
-    "unexpected-http": "3.0.2",
+    "unexpected-http": "3.1.0",
     "unexpected-messy": "3.0.3",
     "unexpected-promise": "1.1.1"
   },
