--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html"
   },
   "peerDependencies": {
-    "unexpected": "^7.2.0",
-    "unexpected-messy": "^3.0.1"
+    "unexpected": "8",
+    "unexpected-messy": "4"
   },
   "devDependencies": {
     "coveralls": "2.11.2",
@@ -19,10 +19,10 @@
     "jshint": "2.6.0",
     "pem": "1.7.2",
     "request": "2.53.0",
-    "unexpected": "7.2.0",
-    "unexpected-http": "3.1.0",
-    "unexpected-messy": "3.0.3",
-    "unexpected-promise": "1.1.1"
+    "unexpected": "8.0.0",
+    "unexpected-http": "4.0.0",
+    "unexpected-messy": "4.0.0",
+    "unexpected-promise": "1.2.0"
   },
   "dependencies": {
     "async": "0.9.0",
