--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "coveralls": "2.11.2",
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
+    "mocha": "2.2.5",
     "pem": "1.7.2",
     "request": "2.53.0",
-    "unexpected": "8.0.0",
+    "unexpected": "8.5.0",
     "unexpected-http": "4.2.1",
-    "unexpected-messy": "4.1.0",
-    "unexpected-promise": "1.2.0"
+    "unexpected-messy": "4.1.0"
   },
   "dependencies": {
     "async": "0.9.0",
@@ -31,7 +31,6 @@
     "memoizesync": "0.5.0",
     "messy": "6.3.0",
     "mitm": "1.1.0",
-    "mocha": "2.1.0",
     "passerror": "1.1.0",
     "underscore": "1.7.0"
   }
