--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html"
   },
   "peerDependencies": {
-    "unexpected": "8",
-    "unexpected-messy": "^4.1.0"
+    "unexpected": "8 || 9",
+    "unexpected-messy": "^4.2.0"
   },
   "devDependencies": {
     "coveralls": "2.11.2",
@@ -21,15 +21,15 @@
     "pem": "1.7.2",
     "request": "2.53.0",
     "unexpected": "8.5.0",
-    "unexpected-http": "4.2.1",
-    "unexpected-messy": "4.1.0"
+    "unexpected-http": "4.4.0",
+    "unexpected-messy": "4.2.0"
   },
   "dependencies": {
     "async": "0.9.0",
     "callsite": "1.0.0",
     "detect-indent": "3.0.0",
     "memoizesync": "0.5.0",
-    "messy": "6.3.0",
+    "messy": "6.3.1",
     "mitm": "1.1.0",
     "passerror": "1.1.0",
     "underscore": "1.7.0"
