--- a/package.json
+++ b/package.json
@@ -10,26 +10,27 @@
     "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html"
   },
   "peerDependencies": {
-    "unexpected": "8 || 9",
-    "unexpected-messy": "^4.2.0"
+    "unexpected": "^9.2.0",
+    "unexpected-messy": "^4.5.0"
   },
   "devDependencies": {
     "coveralls": "2.11.2",
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
+    "magicpen-media": "1.5.0",
     "mocha": "2.2.5",
     "pem": "1.7.2",
     "request": "2.53.0",
-    "unexpected": "8.5.0",
-    "unexpected-http": "4.4.0",
-    "unexpected-messy": "4.2.0"
+    "unexpected": "9.2.0",
+    "unexpected-http": "4.6.1",
+    "unexpected-messy": "4.5.0"
   },
   "dependencies": {
     "async": "0.9.0",
     "callsite": "1.0.0",
     "detect-indent": "3.0.0",
     "memoizesync": "0.5.0",
-    "messy": "6.3.1",
+    "messy": "6.4.0",
     "mitm": "1.1.0",
     "passerror": "1.1.0",
     "underscore": "1.7.0"
