--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
     "coveralls": "2.11.2",
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
-    "magicpen-media": "1.5.0",
     "mocha": "2.2.5",
     "pem": "1.7.2",
     "request": "2.53.0",
-    "unexpected": "9.5.0",
-    "unexpected-http": "4.8.0"
+    "unexpected": "9.6.0",
+    "unexpected-http": "^4.8.0"
   },
   "dependencies": {
     "async": "0.9.0",
