--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js:
   - "0.10"
+  - "0.12"
+  - "iojs-3.0.0"
 before_install: "npm install -g npm && npm cache clean"
 script: "npm run-script travis"
