--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "pem": "1.7.2",
     "request": "2.53.0",
     "semver": "5.0.1",
-    "unexpected": "10.0.0",
-    "unexpected-http": "^5.0.0"
+    "sinon": "1.17.2",
+    "unexpected": "10.5.1",
+    "unexpected-http": "^5.0.0",
+    "unexpected-sinon": "^9.1.0"
   },
   "dependencies": {
     "async": "0.9.0",
