--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "request": "2.53.0",
     "semver": "5.0.1",
     "sinon": "1.17.2",
-    "unexpected": "^10.6.1",
-    "unexpected-http": "^5.1.0",
-    "unexpected-sinon": "^10.0.0"
+    "unexpected": "10.8.2",
+    "unexpected-http": "5.2.0",
+    "unexpected-sinon": "10.1.1"
   },
   "dependencies": {
     "async": "0.9.0",
