--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "main": "lib/unexpectedMitm.js",
   "scripts": {
     "lint": "jshint .",
-    "test": "mocha && npm run lint",
+    "test": "mocha --compilers md:unexpected-markdown test/*.js `find documentation -name '*.md'` && npm run lint",
     "travis": "npm test && npm run coverage && (<coverage/lcov.info coveralls || true)",
-    "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html"
+    "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html",
+    "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js",
+    "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples",
+    "deploy-site": "deploy-site.sh"
   },
   "peerDependencies": {
     "unexpected": "^10.0.0",
@@ -20,6 +23,7 @@
   },
   "devDependencies": {
     "coveralls": "2.11.2",
+    "express": "4.13.4",
     "istanbul": "0.3.5",
     "jshint": "2.6.0",
     "mocha": "2.2.5",
@@ -28,7 +32,10 @@
     "semver": "5.0.1",
     "sinon": "1.17.2",
     "unexpected": "10.8.2",
+    "unexpected-documentation-site-generator": "4.0.0",
+    "unexpected-express": "8.1.0",
     "unexpected-http": "5.2.0",
+    "unexpected-markdown": "1.3.1",
     "unexpected-sinon": "10.1.1"
   },
   "dependencies": {
