--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "jshint .",
     "test": "mocha --compilers md:unexpected-markdown test/*.js `find documentation -name '*.md'` && npm run lint",
     "travis": "npm test && npm run coverage && (<coverage/lcov.info coveralls || true)",
-    "coverage": "NODE_ENV=development istanbul cover _mocha -- --reporter dot && echo google-chrome coverage/lcov-report/index.html",
+    "coverage": "NODE_ENV=development nyc --reporter=lcov --reporter=text -- mocha && echo google-chrome coverage/lcov-report/index.html",
     "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js",
     "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples",
     "deploy-site": "deploy-site.sh"
@@ -24,9 +24,9 @@
   "devDependencies": {
     "coveralls": "2.11.2",
     "express": "4.13.4",
-    "istanbul": "0.3.5",
     "jshint": "2.6.0",
     "mocha": "2.2.5",
+    "nyc": "6.1.1",
     "pem": "1.7.2",
     "request": "2.53.0",
     "semver": "5.0.1",
@@ -48,5 +48,10 @@
     "passerror": "1.1.0",
     "underscore": "1.7.0",
     "unexpected-messy": "^5.0.0"
+  },
+  "nyc": {
+    "exclude": [
+      "testdata/.testfile.js"
+    ]
   }
 }
