Just include lib/** instead of excluding that file in testdata. Tidies up the coverage report.

--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
     "unexpected-messy": "^5.0.0"
   },
   "nyc": {
-    "exclude": [
-      "testdata/.testfile.js"
+    "include": [
+      "lib/**"
     ]
   }
 }
