--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "unexpected-messy": "^6.0.0"
   },
   "devDependencies": {
+    "body-parser": "1.15.0",
     "coveralls": "2.11.2",
     "eslint": "2.4.0",
     "eslint-config-onelint": "1.0.2",
