--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "detect-indent": "3.0.0",
     "memoizesync": "0.5.0",
     "messy": "^6.6.1",
-    "mitm-mwoc": "1.3.0",
+    "mitm": "1.2.1",
     "underscore": "1.7.0",
     "unexpected-messy": "^6.0.0"
   },
