--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "semver": "5.0.1",
     "sinon": "1.17.2",
     "unexpected": "10.10.8",
-    "unexpected-documentation-site-generator": "4.0.0",
+    "unexpected-documentation-site-generator": "^4.0.0",
     "unexpected-express": "8.2.0",
     "unexpected-http": "5.4.0",
-    "unexpected-markdown": "1.3.1",
+    "unexpected-markdown": "^1.4.0",
     "unexpected-sinon": "10.1.1"
   },
   "dependencies": {
