Revert me: Switch to unexpectedjs/unexpected#7077341f4ecc25e56f55928eed91cabfb438418c (tip of feature/child).

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "request": "2.53.0",
     "semver": "5.0.1",
     "sinon": "1.17.2",
-    "unexpected": "10.15.1",
+    "unexpected": "unexpectedjs/unexpected#7077341f4ecc25e56f55928eed91cabfb438418c",
     "unexpected-documentation-site-generator": "^4.0.0",
     "unexpected-express": "8.2.0",
     "unexpected-http": "5.4.0",
