Revert me: Update to unexpectedjs/unexpected-http#d65ac08f746a6837f372b1e26cd890a897a5206a

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "unexpected": "unexpectedjs/unexpected#d10718ac1a1e3dc90f3dadacafd391132e4ebc94",
     "unexpected-documentation-site-generator": "^4.0.0",
     "unexpected-express": "8.2.0",
-    "unexpected-http": "5.4.0",
+    "unexpected-http": "github:unexpectedjs/unexpected-http#d65ac08f746a6837f372b1e26cd890a897a5206a",
     "unexpected-markdown": "^1.4.0",
     "unexpected-sinon": "10.1.1"
   },
