--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "callsite": "1.0.0",
+    "createerror": "1.3.0",
     "detect-indent": "3.0.0",
     "memoizesync": "0.5.0",
     "messy": "^6.16.0",
