--- a/package.json
+++ b/package.json
@@ -24,32 +24,32 @@
     "unexpected": "^10.27.0"
   },
   "devDependencies": {
-    "body-parser": "1.18.2",
-    "coveralls": "2.11.2",
-    "eslint": "2.13.1",
-    "eslint-config-onelint": "1.2.0",
-    "express": "4.16.3",
-    "mocha": "2.2.5",
-    "nyc": "6.4.4",
-    "pem": "1.12.5",
-    "request": "2.53.0",
-    "semver": "5.0.1",
-    "sinon": "1.17.2",
-    "socketerrors-papandreou": "0.2.0-patch2",
-    "unexpected": "10.27.0",
+    "body-parser": "^1.18.2",
+    "coveralls": "^2.11.2",
+    "eslint": "^2.13.1",
+    "eslint-config-onelint": "^1.2.0",
+    "express": "^4.16.3",
+    "mocha": "^2.2.5",
+    "nyc": "^6.4.4",
+    "pem": "^1.12.5",
+    "request": "^2.53.0",
+    "semver": "^5.0.1",
+    "sinon": "^1.17.2",
+    "socketerrors-papandreou": "^0.2.0-patch2",
+    "unexpected": "^10.27.0",
     "unexpected-documentation-site-generator": "^4.0.0",
-    "unexpected-express": "9.0.0",
-    "unexpected-http": "6.0.0",
+    "unexpected-express": "^9.0.0",
+    "unexpected-http": "^6.0.0",
     "unexpected-markdown": "^1.4.0",
-    "unexpected-sinon": "10.1.1"
+    "unexpected-sinon": "^10.1.1"
   },
   "dependencies": {
-    "callsite": "1.0.0",
-    "detect-indent": "3.0.0",
-    "memoizesync": "1.1.1",
+    "callsite": "^1.0.0",
+    "detect-indent": "^3.0.0",
+    "memoizesync": "^1.1.1",
     "messy": "^6.16.0",
-    "mitm-papandreou": "1.3.3-patch4",
-    "underscore": "1.8.3",
+    "mitm-papandreou": "^1.3.3-patch4",
+    "underscore": "^1.8.3",
     "unexpected-messy": "^7.2.0"
   },
   "nyc": {
