--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "express": "^4.16.3",
     "mocha": "^2.2.5",
     "nyc": "^11.6.0",
-    "pem": "^1.12.5",
+    "pem": "1.12.7",
     "request": "^2.53.0",
     "semver": "^5.0.1",
     "sinon": "^4.5.0",
