--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "express": "^4.16.3",
     "mocha": "^4.1.0",
     "nyc": "^13.0.1",
-    "pem": "1.12.7",
+    "pem": "^1.13.1",
     "request": "^2.53.0",
     "semver": "^5.0.1",
     "sinon": "^6.0.0",
