Lock prettier to ~1.14.3 to prevent future changes to the formatting rules for breaking the build

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "mocha": "^4.1.0",
     "nyc": "^13.0.1",
     "pem": "^1.13.1",
-    "prettier": "^1.14.3",
+    "prettier": "~1.14.3",
     "request": "^2.53.0",
     "semver": "^5.0.1",
     "sinon": "^6.0.0",
