Revert me: Switch to github:unexpectedjs/unexpected#fix/inspectArrowFunctionWithLeadingNewline

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "semver": "^5.0.1",
     "sinon": "^6.0.0",
     "socketerrors-papandreou": "^0.2.0-patch2",
-    "unexpected": "^10.27.0",
+    "unexpected": "github:unexpectedjs/unexpected#fix/inspectArrowFunctionWithLeadingNewline",
     "unexpected-documentation-site-generator": "^4.0.0",
     "unexpected-express": "^11.0.0",
     "unexpected-http": "^6.0.0",
