--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "semver": "^5.0.1",
     "sinon": "^7.0.0",
     "socketerrors-papandreou": "^0.2.0-patch2",
-    "unexpected": "^10.39.1",
+    "unexpected": "^11.0.0-3",
     "unexpected-express": "^11.0.0",
     "unexpected-http": "^6.0.0",
     "unexpected-markdown": "^1.4.0",
@@ -55,7 +55,7 @@
     "messy": "^6.16.0",
     "mitm-papandreou": "^1.5.0-patch1",
     "underscore": "^1.8.3",
-    "unexpected-messy": "^8.0.0"
+    "unexpected-messy": "^8.2.0"
   },
   "nyc": {
     "include": [
