--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "6"
-  - "8"
-  - "10"
-  - "11"
-script: "npm run-script travis"
+  - '6'
+  - '8'
+  - '10'
+  - '11'
+script: 'npm run ci'
