--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   ],
   "scripts": {
     "lint": "eslint . && prettier --check '**/*.js'",
-    "test": "mocha --require unexpected-markdown test/*.js `find documentation -name '*.md'`",
+    "test": "mocha test/**/*.js documentation/**/*.md",
     "ci": "npm test && npm run lint && npm run coverage",
-    "coverage": "NODE_ENV=development nyc --reporter=lcov --reporter=text --all -- mocha --require unexpected-markdown test/*.js `find documentation -name '*.md'` && echo google-chrome coverage/lcov-report/index.html",
+    "coverage": "NODE_ENV=development nyc --reporter=lcov --reporter=text --all npm test && echo google-chrome coverage/lcov-report/index.html",
     "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js",
     "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples",
     "deploy-site": "deploy-site.sh"
