--- a/.eslintrc
+++ b/.eslintrc
@@ -16,5 +16,13 @@
         "ignoreReadBeforeAssign": false
       }
     ]
-  }
+  },
+  "overrides": [
+    {
+      "files": ["test/**/*.js"],
+      "rules": {
+        "no-new": "off"
+      }
+    }
+  ]
 }
