--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 node_js:
-  - '8'
-  - '10'
-  - '12'
-  - 'node'
-script: 'npm run ci'
+  - 8
+  - 10
+  - 12
+  - node
+
+script: npm run test:ci
 after_success: '<coverage/lcov.info ./node_modules/coveralls/bin/coveralls.js'
