--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,11 @@ node_js:
   - 14
   - node
 
+matrix:
+  include:
+    - name: Lint
+      node_js: 14
+      script: npm run lint
+
 script: npm run test:ci
 after_success: '<coverage/lcov.info ./node_modules/coveralls/bin/coveralls.js'
