--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "coverage": "nyc --reporter=lcov --reporter=text --all npm test && echo google-chrome coverage/lcov-report/index.html",
     "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js",
     "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples",
-    "deploy-site": "deploy-site.sh"
+    "deploy-site": "deploy-site.sh",
+    "preversion": "offline-github-changelog --next=${npm_package_version} > CHANGELOG.md && git add CHANGELOG.md"
   },
   "peerDependencies": {
     "unexpected": "^10.27.0 || ^11.0.0-3 || ^12.0.0"
@@ -37,6 +38,7 @@
     "express": "^4.16.3",
     "mocha": "^8.2.1",
     "nyc": "^15.0.0",
+    "offline-github-changelog": "^1.7.0",
     "pem": "^1.13.1",
     "prettier": "~2.1.0",
     "request": "^2.53.0",
