--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "generate-site": "generate-site --require ./bootstrap-unexpected-markdown.js",
     "update-examples": "generate-site --require ./bootstrap-unexpected-markdown.js --update-examples",
     "deploy-site": "deploy-site.sh",
-    "preversion": "offline-github-changelog --next=${npm_package_version} > CHANGELOG.md && git add CHANGELOG.md"
+    "preversion": "offline-github-changelog --next=${npm_new_version} > CHANGELOG.md && git add CHANGELOG.md"
   },
   "peerDependencies": {
     "unexpected": "^10.27.0 || ^11.0.0-3 || ^12.0.0 || ^13.0.0"
