--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ name: Tests
 
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: Node ${{ matrix.node }}
     strategy:
       matrix:
@@ -13,6 +13,8 @@ jobs:
           - '14'
           - '16'
           - '18'
+          - '20'
+          - '22'
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
@@ -23,7 +25,7 @@ jobs:
       - run: npm test
 
   test-targets:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     name: ${{ matrix.targets.name }}
     strategy:
       matrix:
